git commit-m "paging"

--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@model IEnumerable<TMDT.Models.Book>
-
+﻿
+@model IPagedList<TMDT.Models.Book>
 
 @using TMDT.Models
+@using PagedList;
+@using PagedList.Mvc;
 @{ ViewBag.Title = "Index";
     if (User.IsInRole("ADMIN") == true)
     {
@@ -16,191 +18,182 @@
 @if (User.IsInRole("ADMIN") == true)
 {
 
-<button class="btn btn-success btn-sm">
-    @Html.ActionLink("Create New", "Create")
-</button>
+    <button class="btn btn-success btn-sm">
+        @Html.ActionLink("Create New", "Create")
+    </button>
 
-                <table class="table table-striped">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Author.AuthorName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Category.CateName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Provider.ProviderName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Publisher.PublisherName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.BookName)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.BookPrice)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.BookDescription)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.PublisherDate)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Image)
-                        </th>
-                        <th></th>
-                    </tr>
+    <table class="table table-striped">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.First().Author.AuthorName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().Category.CateName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().Provider.ProviderName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().Publisher.PublisherName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().BookName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().BookPrice)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().BookDescription)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().PublisherDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.First().Image)
+            </th>
+            <th></th>
+        </tr>
 
-                    @foreach (var item in Model)
-                    {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Author.AuthorName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Category.CateName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Provider.ProviderName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
-        </td>
-        <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Author.AuthorName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Category.CateName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Provider.ProviderName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
+                </td>
+                <td>
 
-            @Html.DisplayFor(modelItem => item.BookName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BookPrice)
-        </td>
-        <td style=" -webkit-line-clamp: 2;
+                    @Html.DisplayFor(modelItem => item.BookName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BookPrice)
+                </td>
+                <td style=" -webkit-line-clamp: 2;
                                     -webkit-box-orient: vertical;
                                     overflow: hidden;
                                     display: -webkit-box;">
-            " >
-            @Html.DisplayFor(modelItem => item.BookDescription)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PublisherDate)
-        </td>
-        <td>
-            <img src="@Url.Content(item.Image)" style="height:40px ;width:40px;" />
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.BookID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.BookID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.BookID })
-        </td>
-    </tr>
+                    " >
+                    @Html.DisplayFor(modelItem => item.BookDescription)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PublisherDate)
+                </td>
+                <td>
+                    <img src="@Url.Content(item.Image)" style="height:40px ;width:40px;" />
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.BookID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.BookID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.BookID })
+                </td>
+            </tr>
+        }
+    </table>
+
 }
-                </table>
-
-                }
-                else
-                {
-<div>
-    <div class="container view_book_wrapper">
-        <div class="banner_top ">
-            <div class="slideshow-container row" style="margin-left:0px !important">
-                <div class="nav_wrapper col-sm-2 col-md-4 col-lg-4">
-                    <p class="sp_list">Danh mục sản phẩm</p>
-                    @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
-                    {
-    <input hidden="hidden" type="text" name="name" value="Kỹ Năng sống" />
-                        <input class="input_cate" type="submit" value="Kỹ Năng sống" />}
-                    @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
-                    {
-    <input hidden="hidden" type="text" name="name" value="Kinh Tế" />
-                        <input class="input_cate" type="submit" value="Kinh Tế" />}
-                    @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
-                    {
-    <input hidden="hidden" type="text" name="name" value="Tiểu Sử Hồi Ký" />
-                        <input class="input_cate" type="submit" value="Tiểu Sử Hồi Ký" />}
-                    @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
-                    {
-    <input hidden="hidden" type="text" name="name" value="Ngôn Tình" />
-                        <input class="input_cate" type="submit" value="Ngôn Tình" />}
-                    @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
-                    {
-    <input hidden="hidden" type="text" name="name" value="Tiểu Thuyết" />
-                        <input class="input_cate" type="submit" value="Tiểu Thuyết" />}
-                    <a href="#news">VPP - DCHS Theo Thương Hiệu</a>
-                    <a href="#news">Sản phẩm</a>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            Bách Hoá OnLine - Lưu niệm
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Ví túi</a>
-                            <a href="#">Đồng hồ</a>
-                            <a href="#">Móc khoá</a>
-                            <a href="#">Khung hình</a>
+else
+{
+    <div>
+        <div class="container view_book_wrapper">
+            <div class="banner_top ">
+                <div class="slideshow-container row" style="margin-left:0px !important">
+                    <div class="nav_wrapper col-sm-2 col-md-4 col-lg-4">
+                        <p class="sp_list">Danh mục sản phẩm</p>
+                        @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
+                        {
+                            <input hidden="hidden" type="text" name="name" value="Kỹ Năng sống" />
+                            <input class="input_cate" type="submit" value="Kỹ Năng sống" />}
+                        @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
+                        {
+                            <input hidden="hidden" type="text" name="name" value="Kinh Tế" />
+                            <input class="input_cate" type="submit" value="Kinh Tế" />}
+                        @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
+                        {
+                            <input hidden="hidden" type="text" name="name" value="Tiểu Sử Hồi Ký" />
+                            <input class="input_cate" type="submit" value="Tiểu Sử Hồi Ký" />}
+                        @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
+                        {
+                            <input hidden="hidden" type="text" name="name" value="Ngôn Tình" />
+                            <input class="input_cate" type="submit" value="Ngôn Tình" />}
+                        @using (Html.BeginForm("LoadSachTheoDanhMuc", "Books"))
+                        {
+                            <input hidden="hidden" type="text" name="name" value="Tiểu Thuyết" />
+                            <input class="input_cate" type="submit" value="Tiểu Thuyết" />}
+                        <a href="#news">VPP - DCHS Theo Thương Hiệu</a>
+                        <a href="#news">Sản phẩm</a>
+                        <div class="dropdown">
+                            <button class="dropbtn">
+                                Bách Hoá OnLine - Lưu niệm
+                                <i class="fa fa-caret-down"></i>
+                            </button>
+                            <div class="dropdown-content">
+                                <a href="#">Ví túi</a>
+                                <a href="#">Đồng hồ</a>
+                                <a href="#">Móc khoá</a>
+                                <a href="#">Khung hình</a>
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
+                    <div class="col-sm-8 col-md-8 col-lg-8" style="padding:0px;">
+                        <ul class="container" style="padding:0px;margin:0">
+                            <li><img src="~/Content/Images/book_banner1.jpg"></li>
+                            <li><img src="~/Content/Images/book_banner3.jpg"></li>
+                            <li><img src="~/Content/Images/book_banner1.jpg"></li>
+                            <li><img src="~/Content/Images/book_banner2.jpg"></li>
+                            <li><img src="~/Content/Images/book_banner3.jpg"></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="col-sm-8 col-md-8 col-lg-8" style="padding:0px;">
-                    <ul class="container" style="padding:0px;margin:0">
-                        <li><img src="~/Content/Images/book_banner1.jpg"></li>
-                        <li><img src="~/Content/Images/book_banner3.jpg"></li>
-                        <li><img src="~/Content/Images/book_banner1.jpg"></li>
-                        <li><img src="~/Content/Images/book_banner2.jpg"></li>
-                        <li><img src="~/Content/Images/book_banner3.jpg"></li>
-                    </ul>
-                </div>
-            </div>
 
-            <div class="row row_book">
-                @ViewBag.nullBook
-                @foreach (var item in Model)
-                {
-<div class="col-sm-6 col-md-4 col-lg-3">
-    @*<div class="card item_book">
-            <a href="@Url.Action("Details", "Book", new { id = item.BookID })">
-                <img class="img_book" src="@Url.Content(item.Image)" />
-            </a>
+                <div class="row row_book">
+                    @ViewBag.nullBook
+                    @foreach (var item in Model)
+                    {
+                        <div class="col-sm-6 col-md-4 col-lg-3">
+                            <div class="book-item">
+                                <div class="product-block">
+                                    <div class="left-block">
+                                        <a class="product_img_link" target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" title="Book">
+                                            <img class="img-responsive" src="@Url.Content(item.Image)" border="0" alt="banner" style="height:250px;width:auto" />
+                                        </a>
+                                        <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="quick-view btn-tooltip">
+                                            <i class="glyphicon glyphicon-eye-open"></i>
+                                        </a>
+                                        @*<span class="label-new label">New</span>*@
+                                    </div>
+                                    <div class="right-block">
+                                        <div class="product-meta">
+                                            <h5 class="name">
+                                                <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="product-name">@Html.DisplayFor(modelItem => item.BookName)</a>
+                                            </h5>
+                                            <div class="content_price">
+                                                <span class="price product-price">
+                                                    @Html.DisplayFor(modelItem => item.BookPrice) &#36;
+                                                </span>
+                                                <span class="old-price product-price">999,999&#36;</span>
+                                                <span class="price-percent-reduction">50%</span>
+                                            </div>
+                                            <div class="functional-buttons clearfix">
+                                                <a target="_parent" href="/ShoppingCart/AddToCart/@item.BookID" class="button ajax_add_to_cart_button"><span>Add to cart</span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>}
+                    <br />
 
-            <div class="name_book">@Html.DisplayFor(modelItem => item.BookName)</div>
-            <div class="price_book">
-                <a href="/ShoppingCart/AddToCart/@item.BookID" class="glyphicon glyphicon-shopping-cart">
-                </a>
-                @Html.DisplayFor(modelItem => item.BookPrice, ".ToString(N0)")&dstrok;
-            </div>
-        </div>*@
-    <div class="book-item">
-        <div class="product-block">
-            <div class="left-block">
-                <a class="product_img_link" target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" title="Book">
-                    <img class="img-responsive" src="@Url.Content(item.Image)" border="0" alt="banner" style="height:250px;width:auto" />
-                </a>
-                <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="quick-view btn-tooltip">
-                    <i class="glyphicon glyphicon-eye-open"></i>
-                </a>
-                @*<span class="label-new label">New</span>*@
-            </div>
-            <div class="right-block">
-                <div class="product-meta">
-                    <h5 class="name">
-                        <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="product-name">@Html.DisplayFor(modelItem => item.BookName)</a>
-                    </h5>
-                    <div class="content_price">
-                        <span class="price product-price">
-                            @Html.DisplayFor(modelItem => item.BookPrice) &#36;
-                        </span>
-                        <span class="old-price product-price">999,999&#36;</span>
-                        <span class="price-percent-reduction">50%</span>
-                    </div>
-                    <div class="functional-buttons clearfix">
-                        <a target="_parent" href="/ShoppingCart/AddToCart/@item.BookID" class="button ajax_add_to_cart_button"><span>Add to cart</span></a>
-                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>}
-            </div>
-        </div>
-    </div>
-</div>}
+    </div>}
+@Html.PagedListPager(Model,i=>Url.Action("Index", "Books",new { i,search=Request.QueryString["search"]}))
