fix paging and add intstock

--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -21,7 +21,7 @@
     <button class="btn btn-success btn-sm">
         @Html.ActionLink("Create New", "Create")
     </button>
-
+    <input class="form-control" id="myInput" type="text" placeholder="Search..">
     <table class="table table-striped">
         <tr>
             <th>
@@ -40,6 +40,9 @@
                 @Html.DisplayNameFor(model => model.First().BookName)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.First().InStock)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.First().BookPrice)
             </th>
             <th>
@@ -53,50 +56,58 @@
             </th>
             <th></th>
         </tr>
+        <tbody id="myTable">
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Author.AuthorName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Category.CateName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Provider.ProviderName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
+                    </td>
+                    <td>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Author.AuthorName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category.CateName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Provider.ProviderName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
-                </td>
-                <td>
+                        @Html.DisplayFor(modelItem => item.BookName)
+                    </td>
+                    <td>
 
-                    @Html.DisplayFor(modelItem => item.BookName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BookPrice)
-                </td>
-                <td style=" -webkit-line-clamp: 2;
-                                    -webkit-box-orient: vertical;
-                                    overflow: hidden;
-                                    display: -webkit-box;">
-                    " >
-                    @Html.DisplayFor(modelItem => item.BookDescription)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PublisherDate)
-                </td>
-                <td>
-                    <img src="@Url.Content(item.Image)" style="height:40px ;width:40px;" />
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.BookID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.BookID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.BookID })
-                </td>
-            </tr>
-        }
-    </table>
+                        @Html.DisplayFor(modelItem => item.InStock)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BookPrice)
+                    </td>
+                    <td style=" -webkit-line-clamp: 4;
+                    line-height:18px;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    display: -webkit-box;
+                    padding:0;
+                    text-overflow:ellipsis;
+                    ">
+                        " >
+                        @Html.DisplayFor(modelItem => item.BookDescription)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PublisherDate)
+                    </td>
+                    <td>
+                        <img src="@Url.Content(item.Image)" style="height:40px ;width:40px;" />
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.BookID }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.BookID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.BookID })
+                    </td>
+                </tr>
+            }</tbody>
+</table>
 
 }
 else
@@ -158,42 +169,46 @@ else
                     @ViewBag.nullBook
                     @foreach (var item in Model)
                     {
-                        <div class="col-sm-6 col-md-4 col-lg-3">
-                            <div class="book-item">
-                                <div class="product-block">
-                                    <div class="left-block">
-                                        <a class="product_img_link" target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" title="Book">
-                                            <img class="img-responsive" src="@Url.Content(item.Image)" border="0" alt="banner" style="height:250px;width:auto" />
-                                        </a>
-                                        <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="quick-view btn-tooltip">
-                                            <i class="glyphicon glyphicon-eye-open"></i>
-                                        </a>
-                                        @*<span class="label-new label">New</span>*@
-                                    </div>
-                                    <div class="right-block">
-                                        <div class="product-meta">
-                                            <h5 class="name">
-                                                <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="product-name">@Html.DisplayFor(modelItem => item.BookName)</a>
-                                            </h5>
-                                            <div class="content_price">
-                                                <span class="price product-price">
-                                                    @Html.DisplayFor(modelItem => item.BookPrice) &#36;
-                                                </span>
-                                                <span class="old-price product-price">999,999&#36;</span>
-                                                <span class="price-percent-reduction">50%</span>
-                                            </div>
-                                            <div class="functional-buttons clearfix">
-                                                <a target="_parent" href="/ShoppingCart/AddToCart/@item.BookID" class="button ajax_add_to_cart_button"><span>Add to cart</span></a>
+                        if (item.InStock != 0 || item.InStock > 0)
+                        {
+                            <div class="col-sm-6 col-md-4 col-lg-3">
+                                <div class="book-item">
+                                    <div class="product-block">
+                                        <div class="left-block">
+                                            <a class="product_img_link" target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" title="Book">
+                                                <img class="img-responsive" src="@Url.Content(item.Image)" border="0" alt="banner" style="height:250px;width:auto" />
+                                            </a>
+                                            <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="quick-view btn-tooltip">
+                                                <i class="glyphicon glyphicon-eye-open"></i>
+                                            </a>
+                                            @*<span class="label-new label">New</span>*@
+                                        </div>
+                                        <div class="right-block">
+                                            <div class="product-meta">
+                                                <h5 class="name">
+                                                    <a target="_blank" href="@Url.Action("Details", "Books", new { id = item.BookID })" class="product-name">@Html.DisplayFor(modelItem => item.BookName)</a>
+                                                </h5>
+                                                <div class="content_price">
+                                                    <span class="price product-price">
+                                                        @Html.DisplayFor(modelItem => item.BookPrice) &#36;
+                                                    </span>
+                                                    <span class="old-price product-price">999,999&#36;</span>
+                                                    <span class="price-percent-reduction">50%</span>
+                                                </div>
+                                                <div class="functional-buttons clearfix">
+                                                    <a target="_parent" href="/ShoppingCart/AddToCart/@item.BookID" class="button ajax_add_to_cart_button"><span>Add to cart</span></a>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>}
+                        }
+                    }
                     <br />
 
                 </div>
             </div>
         </div>
     </div>}
-@Html.PagedListPager(Model,i=>Url.Action("Index", "Books",new { i,search=Request.QueryString["search"]}))
+@Html.PagedListPager(Model, i => Url.Action("Index", "Books", new { i, search = Request.QueryString["search"] }))
