--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -196,7 +196,8 @@ else
                                                     <span class="price-percent-reduction">50%</span>
                                                 </div>
                                                 <div class="functional-buttons clearfix">
-                                                    <a target="_parent" href="/ShoppingCart/AddToCart/@item.BookID" class="button ajax_add_to_cart_button"><span>Add to cart</span></a>
+                                                   
+                                                    <a target="_parent" href="/ShoppingCart/AddToCart/@item.BookID?quantity=1" class="button ajax_add_to_cart_button"><span>Add to cart</span></a>
                                                 </div>
                                             </div>
                                         </div>
