--- a/TMDT/Views/HttpErrors/NotFound.cshtml
+++ b/TMDT/Views/HttpErrors/NotFound.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@{ Layout = null;}
 <!DOCTYPE html>
 
 <html lang="vi">
@@ -53,5 +53,6 @@
         </svg>
 
     </div>
+    <a href="/#">Quay về trang chủ</a>
 </body>
 </html>
