--- a/TMDT/Views/Books/Details.cshtml
+++ b/TMDT/Views/Books/Details.cshtml
@@ -31,17 +31,8 @@ Layout = "~/Views/Shared/_Layout.cshtml";
                 <div class="form-group m-2">
                     <input type="hidden" name="id" value=@Model.BookID />
                     <input type="number" class="form-control" value=1 name="quantity" style="width: 80px" min="1" max=@Model.InStock>
-                </div>
-                @*@if (Model.Inventory != 0)
-        {
-            <button type="submit" class="btn btn-primary m-2">Đặt mua</button>
-        }
-        else
-        {
-            <button type="submit" class="btn btn-primary m-2" disabled>Hết hàng</button>
-        }*@
-                <div class="functional-buttons clearfix">
-
+                </div>             
+                <div class="btn btn-warning">
                    <button type="submit">Mua Ngay</button>
                 </div>
             </form>
