--- a/TMDT/Views/Books/Details.cshtml
+++ b/TMDT/Views/Books/Details.cshtml
@@ -2,11 +2,11 @@
 
 @{
     ViewBag.Title = "Details";
-<<<<<<< Updated upstream
-      Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-=======
     Layout = "~/Views/Shared/_Layout.cshtml";
->>>>>>> Stashed changes
+@*<<<<<<< Updated upstream
+      Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+=======*@
+    //>>>>>>> Stashed changes
 }
 <head>
     <meta charset="utf-8">
