--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -190,9 +190,9 @@ else
                                                 </h5>
                                                 <div class="content_price">
                                                     <span class="price product-price">
-                                                        @Html.DisplayFor(modelItem => item.BookPrice) &#36;
+                                                        @item.BookPrice.ToString("N0")₫
                                                     </span>
-                                                    <span class="old-price product-price">999,999&#36;</span>
+                                                    <span class="old-price product-price">999,999₫</span>
                                                     <span class="price-percent-reduction">50%</span>
                                                 </div>
                                                 <div class="functional-buttons clearfix">
